--- a/flask-app/templates/nominee_managment.html
+++ b/flask-app/templates/nominee_managment.html
@@ -30,89 +30,85 @@
                 </div>
                 <h1 style="font-size: 24px;">Nominees</h1>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-6" style="height: 50px;width: 260px;"><input type="text"></div>
+                    <div class="row"> 
                         <div class="col-md-6" style="width: 240px;height: 50px;">
                             <div class="dropdown"><button class="btn btn-primary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">SELECT CATEGORY</button>
                                 <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
                             </div>
                         </div>
-                        <div class="col" style="margin-left: -5px;padding-left: 161px;"><button class="btn btn-primary" type="button" style="padding-bottom: 3px;padding-left: 6px;padding-right: 0px;margin-left: -65px;">Remove Nominee</button></div>
+                        
                     </div>
-                </div><button class="btn btn-primary" type="button" style="padding: 6px 12px;margin-left: 24px;padding-bottom: 0px;padding-top: 0px;margin-top: -29px;padding-right: 32px;padding-left: 32px;">Add Nominee</button>
-                <header></header>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-lg-4" style="width: 249px;">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Category</th>
-                                            <th>Votes Count</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Cell 1</td>
-                                            <td>Cell 2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Cell 3</td>
-                                            <td>Cell 4</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                    <div class="col-md-6" style="height: 50px;width: 260px;"><input type="text"></div> </div> 
+                    <button class="btn btn-primary" type="button" style="padding: 6px 12px;margin-left: 24px;padding-bottom: 0px;padding-top: 0px;margin-top: -29px;padding-right: 32px;padding-left: 32px;">Add Nominee</button>
+                <div class="row">
+                    <div class="col">
+                        <div class="card shadow">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <h6 class="text-primary fw-bold m-0">Nominees For Selected Category</h6>
                             </div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Age</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Cell 1</td>
-                                            <td>Cell 2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Cell 3</td>
-                                            <td>Cell 4</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th style="/*padding: 8px;*//*padding-top: 0px;*/margin: 0px;height: 40.5px;width: 110.562px;margin-top: -7px;padding-bottom: 21px;margin-bottom: -16px;">Department</th>
-                                            <th style="padding-left: 57px;"><button class="btn btn-primary" type="button" style="padding-bottom: 6px;padding-left: 2px;margin-left: -21px;margin-right: -1px;padding-right: 0px;">Remove</button></th>
-                                            <th></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td style="/*margin-top: 7px;*//*padding-bottom: 32px;*//*padding-top: 0px;*//*margin-bottom: 0px;*/">cell 2</td>
-                                            <td><button class="btn btn-primary" type="button" style="margin-top: -4px;padding-bottom: 0px;padding-right: 0px;margin-right: 2px;padding-left: 0px;margin-left: 30px;">Remove</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td style="padding-bottom: 26px;margin-top: 17px;padding-top: 0px;margin-bottom: -31px;">Cell 3</td>
-                                            <td style="padding-right: 33px;margin-right: -4px;padding-left: 15px;margin-left: -13px;"><button class="btn btn-primary" type="button" style="padding-top: 0px;padding-left: 0px;margin-left: 23px;margin-right: 18px;padding-right: 0px;">Remove</button></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                    </div>
+                                    <div class="col-md-6">
+                                            <input class="form-control form-control-sm" type="text" aria-controls="dataTable" placeholder="Search" id="dashboard_psi_search" />
+                                    </div>
+                                </div>
+                                <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                                    <table class="table my-0" id="dataTable">
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th style="width: 98px;">Category</th>
+                                                <th style="width: 98px;">Votes</th>
+                                                <th style="width: 139.587px;">Age</th>
+                                                <th style="width: 102.837px;">Department</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for entry in nomineeInfo %}
+
+                                            <tr id="{{ 'tr' + entry['id']|string }}">
+
+                                                <!-- Drop Down for options -->
+                                             
+                                            
+                                                <!-- Project Name -->
+                                                <td>{{ entry.name }}</td>
+                                            
+                                                <!-- Show the budget of the project -->
+                                                <td>£{{ entry.category }}</td>
+                                            
+                                                <!-- Show the progress bar for Votes COUNT -->
+                                                <td>
+                                                  <div class="progress" style="width: 80.462px;height: 25px;">
+                                                    <div class="progress-bar" aria-valuenow="{{ entry.Votes }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.Votes }}%;">{{ entry.Votes }}%</div>
+                                                  </div>
+                                                </td>
+                                            
+                                                <td>{{ entry.age }}</td>
+
+                                                <!-- Show the group size of the project -->
+                                                <td>{{ entry.department }}</td>
+                                            
+                                                <!-- Show the deadline using function "formatDate" to correct format -->
+                                              </tr>
+                                            {% else %}
+                                              <tr>
+                                                <td colspan="6" style="text-align: center;">
+                                                  <p class="display-1 m-0">No Nominees...</p>
+                                                  <p class="text-dark mb-5 lead">You don't have any Nominees yet!</p>
+                                                </td>
+                                              </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                            
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <header></header>
             </div>
             <footer class="bg-white sticky-footer"></footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
