--- a/flask-app/templates/category.html
+++ b/flask-app/templates/category.html
@@ -15,13 +15,37 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-lg-6 col-xl-3 mb-4">
-                            <div class="dropdown"><button class="btn btn-primary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">SELECT CATEGORY</button>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button">SELECT CATEGORY</button>
+                                <div class="text-dark fw-bold h5 mb-0">
+                                    <select name ="pt_project_select">
+                                        {%for entry in categoryList %}
+                                            {% if topInfo.selectedProject|string == entry.id|string %}
+                                                <option value={{entry.id}} selected="">{{entry.name}}</option>
+                                            {% else %}
+                                                <option value = {{entry.id}}>{{entry.name}}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-xl-3 mb-4"><button class="btn btn-primary" type="button">ADD CATEGORY</button><input type="text"></div>
-                        <div class="col-md-6 col-xl-3 mb-4"><button class="btn btn-primary" type="button">CLOSE CATEGORY</button><input type="text"></div>
-                        <div class="col-md-6 col-xl-3 mb-4"><button class="btn btn-primary" type="button">REMOVE CATEGORY</button><input type="text"></div>
+                        <div class="col-md-6 col-xl-9 mb-4">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <button class="btn btn-primary" type="button">ADD CATEGORY</button>
+                                    <input type="text">
+                                </div>
+                                <div class="col-md-4">
+                                    <button class="btn btn-primary" type="button">CLOSE CATEGORY</button>
+                                    <input type="text">
+                                </div>
+                                <div class="col-md-4">
+                                    <button class="btn btn-primary" type="button">REMOVE CATEGORY</button>
+                                    <input type="text">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-7 col-xl-8">
