--- a/flask-app/templates/nominee_managment.html
+++ b/flask-app/templates/nominee_managment.html
@@ -40,76 +40,65 @@
                     </div>
                     <div class="col-md-6" style="height: 50px;width: 260px;"><input type="text"></div> </div> 
                     <button class="btn btn-primary" type="button" style="padding: 6px 12px;margin-left: 24px;padding-bottom: 0px;padding-top: 0px;margin-top: -29px;padding-right: 32px;padding-left: 32px;">Add Nominee</button>
-                <div class="row">
-                    <div class="col">
-                        <div class="card shadow">
-                            <div class="card-header d-flex justify-content-between align-items-center">
-                                <h6 class="text-primary fw-bold m-0">Nominees For Selected Category</h6>
-                            </div>
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                    </div>
-                                    <div class="col-md-6">
-                                            <input class="form-control form-control-sm" type="text" aria-controls="dataTable" placeholder="Search" id="dashboard_psi_search" />
-                                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="card shadow">
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <h6 class="text-primary fw-bold m-0">Nominees For Selected Category</h6>
                                 </div>
-                                <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                    <table class="table my-0" id="dataTable">
-                                        <thead>
-                                            <tr>
-                                                <th>Name</th>
-                                                <th style="width: 98px;">Category</th>
-                                                <th style="width: 98px;">Votes</th>
-                                                <th style="width: 139.587px;">Age</th>
-                                                <th style="width: 102.837px;">Department</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for entry in nomineeInfo %}
-
-                                            <tr id="{{ 'tr' + entry['id']|string }}">
-
-                                                <!-- Drop Down for options -->
-                                             
-                                            
-                                                <!-- Project Name -->
-                                                <td>{{ entry.name }}</td>
-                                            
-                                                <!-- Show the budget of the project -->
-                                                <td>£{{ entry.category }}</td>
-                                            
-                                                <!-- Show the progress bar for Votes COUNT -->
-                                                <td>
-                                                  <div class="progress" style="width: 80.462px;height: 25px;">
-                                                    <div class="progress-bar" aria-valuenow="{{ entry.Votes }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.Votes }}%;">{{ entry.Votes }}%</div>
-                                                  </div>
-                                                </td>
-                                            
-                                                <td>{{ entry.age }}</td>
-
-                                                <!-- Show the group size of the project -->
-                                                <td>{{ entry.department }}</td>
-                                            
-                                                <!-- Show the deadline using function "formatDate" to correct format -->
-                                              </tr>
-                                            {% else %}
-                                              <tr>
-                                                <td colspan="6" style="text-align: center;">
-                                                  <p class="display-1 m-0">No Nominees...</p>
-                                                  <p class="text-dark mb-5 lead">You don't have any Nominees yet!</p>
-                                                </td>
-                                              </tr>
-                                            {% endfor %}
-                                        </tbody>
-                                            
-                                    </table>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input class="form-control form-control-sm" type="text" aria-controls="dataTable" placeholder="Search" id="dashboard_psi_search" />
+                                        </div>
+                                    </div>
+                                    <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                                        <table class="table my-0" id="dataTable">
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">Name</th>
+                                                    <th class="text-center" style="width: 98px;">Category</th>
+                                                    <th class="text-center" style="width: 98px;">Votes</th>
+                                                    <th class="text-center" style="width: 139.587px;">Age</th>
+                                                    <th class="text-center" style="width: 102.837px;">Department</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for entry in nomineeInfo %}
+                                                <tr id="{{ 'tr' + entry['id']|string }}">
+                                                    <!-- Drop Down for options -->
+                                                    <!-- Project Name -->
+                                                    <td class="text-center">{{ entry.name }}</td>
+                                                    <!-- Show the budget of the project -->
+                                                    <td class="text-center">{{ entry.category }}</td>
+                                                    <!-- Show the progress bar for Votes COUNT -->
+                                                    <td class="text-center">
+                                                        <div class="progress" style="width: 80.462px;height: 25px;">
+                                                            <div class="progress-bar" aria-valuenow="{{ entry.Votes }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ entry.Votes }}%;">{{ entry.Votes }}%</div>
+                                                        </div>
+                                                    </td>
+                                                    <td class="text-center">{{ entry.age }}</td>
+                                                    <!-- Show the group size of the project -->
+                                                    <td class="text-center">{{ entry.department }}</td>
+                                                    <!-- Show the deadline using function "formatDate" to correct format -->
+                                                </tr>
+                                                {% else %}
+                                                <tr>
+                                                    <td colspan="6" class="text-center">
+                                                        <p class="display-1 m-0">No Nominees...</p>
+                                                        <p class="text-dark mb-5 lead">You don't have any Nominees yet!</p>
+                                                    </td>
+                                                </tr>
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>   
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div>     
             <footer class="bg-white sticky-footer"></footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
